# SorghumFactory

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  Project Structure.pptx  README.md
Parameters/: abc.csv  childrenendnodeamount.csv  distancetobranchend.csv  distancetobranchstart.csv  inhibitortransmitfactor.csv  level.csv  longestdistancetoanyendnode.csv  maxchildlevel.csv  maxchildorder.csv  order.csv  pine.csv  resourcetogrow.csv
Resources/: Dirt.ueprefab  Env.ueprefab  Mature.sorghumstategenerator  Scene.ueprefab  Simple.sorghumstategenerator  Skeleton.sorghumstategenerator  Sorghum_Traits.csv  Young.sorghumstategenerator
Resources/BezierSkeletons/: skeleton_procedural_1.txt  skeleton_procedural_2.txt  skeleton_procedural_3.txt  skeleton_procedural_4.txt  skeleton_procedural_5.txt  skeleton_procedural_6.txt
Resources/FieldData/: full.csv  simple.txt
Resources/Parameters/: default.treeparam
Resources/Season12/: .uemetadata  New PositionsField.possorghumfield
Resources/SolarRadiation/: 2021.7.7-2021.7.9-PT5M.csv  33.073528_-111.973816_PVsyst_PT60M.csv  33.073528_-111.973816_Solcast_PT10M.csv  33.073528_-111.973816_Solcast_PT15M.csv  33.073528_-111.973816_Solcast_PT30M.csv  33.073528_-111.973816_Solcast_PT5M.csv  33.073528_-111.973816_Solcast_PT60M.csv  33.073528_-111.973816_Solcast_native.csv  Ceptometer Protocol.docx  Monthly 33.073528 -111.973816 p50.csv  format.csv
include/RayTracerFacility/: RayTracedRenderer.hpp  RayTracer.hpp  RayTracerUtilities.cuh
include/Scripts/: AutoSorghumGenerationPipeline.hpp  CBTFImporter.hpp  GeneralAutomatedPipeline.hpp  GeneralDataCapture.hpp  IlluminationEstimation.hpp  PointCloudCapture.hpp  ProceduralSorghumSegmentationMask.hpp  SDFDataCapture.hpp
include/SorghumFactory/: CBTFGroup.hpp  Curve.hpp  CurveDescriptor.hpp  DepthCamera.hpp  DoubleCBTF.hpp  FieldGround.hpp  ICurve.hpp  IVolume.hpp  InternodeRingSegment.hpp  LeafData.hpp  LeafSegment.hpp  ObjectRotator.hpp  PARSensorGroup.hpp  PanicleData.hpp  PinnacleData.hpp  PlantSystem.hpp  ProceduralSorghum.hpp  ProceduralSorghumDescriptor.hpp  ProceduralSorghumGrowthDescriptor.hpp  SkyIlluminance.hpp  SorghumData.hpp  SorghumField.hpp  SorghumLayer.hpp  SorghumParameters.hpp  SorghumProceduralDescriptor.hpp  SorghumStateGenerator.hpp  SorghumSystem.hpp  Spline.hpp  StemData.hpp  TriangleIlluminationEstimator.hpp  Volume.hpp
include/core/: CameraControlSystem.hpp  CubeVolume.hpp  Curve.hpp  FoliageGeneratorBase.hpp  InternodeRingSegment.hpp  LeafSegment.hpp  ObjectRotator.hpp  PlantManager.hpp  PlantSystem.hpp  RadialBoundingVolume.hpp  RayTracerMaterial.hpp  SorghumData.hpp  SorghumMLVQ-pch.hpp  SorghumManager.hpp  SorghumParameters.hpp  SorghumSystem.hpp  TreeData.hpp  TreeLeaves.hpp  TreeManager.hpp  TreeParameters.hpp  TreeSystem.hpp  TriangleIlluminationEstimator.hpp  Volume.hpp  VoxelSpace.hpp  rapidxml_print.hpp
include/lib/: CUDABuffer.hpp  CUDAModule.hpp  DebugOutputRenderType.hpp  DefaultOutputRenderType.hpp  DefaultRayTracedRenderingSystem.hpp  DisneyBssrdf.hpp  FileIO.hpp  FileUtil.hpp  LaunchParams.hpp  LinearCongruenceGenerator.hpp  Optix7.hpp  OptixRayTracer.hpp  RayDataDefinations.hpp  RayMLVQ.hpp  RayMLVQRayTracedRenderingSystem.hpp  RayRecords.hpp  RayTracedRenderer.hpp  RayTracedRenderingSystem.hpp  RayTracer.hpp  RayTracerManager.hpp  RayTracerMaterial.hpp  RayTracerUtilities.cuh  Spectrum.cuh  Vertex.hpp
include/lib/MLVQ/: AuxFuncs.hpp  BTFBase.cuh  BTFIAB.cuh  CIELab.cuh  CIELab.hpp  GlobalDefs.hpp  IndexAB.cuh  IndexAB.hpp  PDF1D.cuh  PDF1D.hpp  PDF2D.cuh  PDF2D.hpp  PDF2DSeparate.cuh  PDF2Da.hpp  PDF3D.cuh  PDF3D.hpp  PDF4D.cuh  PDF4D.hpp  PDF6D.cuh  PDF6D.hpp  SharCoors.hpp  SharedCoordinates.cuh  TAlloc.hpp  TBTFbase.hpp  VectorColor.cuh  VectorColor.hpp  ibtfbase.hpp
src/RayTracerFacility/: RayTracer.cu  RayTracerManager.cpp
src/RayTracerFacility/ptx/: DefaultRendering.cu
src/Scripts/: AutoSorghumGenerationPipeline.cpp  CBTFImporter.cpp  GeneralAutomatedPipeline.cpp  GeneralDataCapture.cpp  IlluminationEstimation.cpp  PointCloudCapture.cpp  ProceduralSorghumSegmentationMask.cpp  SDFDataCapture.cpp
src/SorghumFactory/: CBTFGroup.cpp  Curve.cpp  DepthCamera.cpp  DoubleCBTF.cpp  FieldGround.cpp  ICurve.cpp  IVolume.cpp  InternodeRingSegment.cpp  LeafData.cpp  LeafSegment.cpp  ObjectRotator.cpp  PARSensorGroup.cpp  PanicleData.cpp  PinnacleData.cpp  PlantSystem.cpp  ProceduralSorghum.cpp  ProceduralSorghumDescriptor.cpp  ProceduralSorghumGrowthDescriptor.cpp  SkyIlluminance.cpp  SorghumData.cpp  SorghumField.cpp  SorghumLayer.cpp  SorghumParameters.cpp  SorghumProceduralDescriptor.cpp  SorghumStateGenerator.cpp  SorghumSystem.cpp  Spline.cpp  StemData.cpp  TriangleIlluminationEstimator.cpp
src/app/: Application.cpp  DatasetPipelines.cpp  SDF.cpp  SorghumFactory.cpp  SorghumMLVQ.cpp  imgui.ini  sample-main.cpp
src/core/: CameraControlSystem.cpp  CubeVolume.cpp  Curve.cpp  FoliageGeneratorBase.cpp  InternodeRingSegment.cpp  LeafSegment.cpp  ObjectRotator.cpp  PlantManager.cpp  PlantSystem.cpp  RadialBoundingVolume.cpp  RayTracerMaterial.cpp  SorghumData.cpp  SorghumFactory.cpp  SorghumManager.cpp  SorghumParameters.cpp  SorghumSystem.cpp  TreeData.cpp  TreeLeaves.cpp  TreeManager.cpp  TreeParameters.cpp  TreeSystem.cpp  TriangleIlluminationEstimator.cpp  VoxelSpace.cpp
src/lib/: CUDABuffer.cpp  CUDAModule.cpp  CUDAModule.cu  DebugRendering.cu  DefaultRayTracedRenderingSystem.cpp  FileIO.cpp  IlluminationEstimation.cu  IlluminationVisualization.cu  OptixRayTracer.cpp  OptixRayTracer.cu  RayMLVQ.cpp  RayMLVQRayTracedRenderingSystem.cpp  RayTracedRenderer.cpp  RayTracedRenderingSystem.cpp  RayTracer.cu  RayTracerManager.cpp  RayTracerMaterial.cpp  stb.cpp
src/lib/MLVQ/: AuxFuncs.cu  BTFBase.cpp  BTFIAB.cpp  BTFMaterial.cu  CIELab.cu  IndexAB.cpp  IndexAB.cu  PDF1D.cpp  PDF1D.cu  PDF2D.cu  PDF2DSeperate.cpp  PDF2Da.cu  PDF2Da2.cu  PDF3D.cpp  PDF3D.cu  PDF4D.cpp  PDF4D.cu  PDF6D.cpp  PDF6D.cu  SharCoors.cu  SharedCoordinates.cpp  SharedCoordinates.cu  TAlloc.cu  TBTFbase.cu  VectorColor.cpp  VectorColor.cu  (+1 more)
(+5 files in other folders)
